tests/ill_typed/intrinsic_params.mist
def foo(): Any = 3 + "foo"